--- a/app/config.properties
+++ b/app/config.properties
@@ -1,4 +1,4 @@
-# version one - feature_1=False, version two - feature_1=True
+# version 1 - feature_1=False, version 2 - feature_1=True
 [features]
 feature_1=False
 feature_2=False
