--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -19,6 +19,7 @@ spec:
       containers:
         - image: hello-gitops
           name: hello-gitops
+          platform: linux/amd64
           ports:
             - name: http
               containerPort: 8050
