--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -2,19 +2,19 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: hello-gitopss
-  name: hello-gitops-v1
+    app: hello-gitops
+  name: hello-gitops-v2
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: hello-gitops
-      version: v1
+      version: v2
   template:
     metadata:
       labels:
         app: hello-gitops
-        version: v1
+        version: v2
     spec:
       containers:
         - image: hello-gitops
@@ -24,4 +24,4 @@ spec:
               containerPort: 8050
           env:
             - name: VERSION
-              value: v1
+              value: v2
